mra/MRAPanel: Cleanup Java9+ deprecation of newInstance.